--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,5 +1,6 @@
 name: Docker Image CI
 
+
 on:
   push:
     branches: [ main ]
@@ -12,7 +13,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
+    steps
+    - uses: uraimo/run-on-arch-action@v2.1.1
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --platform linux/arm64 --tag carloszan/politicians:$(date +%s)
