--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,7 +13,7 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps
+    steps:
     - uses: uraimo/run-on-arch-action@v2.1.1
     - uses: actions/checkout@v2
     - name: Build the Docker image
