--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/charts": "^1.2.14",
     "axios": "^0.21.4",
+    "babel-jest": "26.6.0",
+    "bootstrap": "5.1.1",
+    "cheerio": "^1.0.0-rc.10",
     "react": "^17.0.2",
-    "react-bootstrap": "2.0.0-beta.6",
+    "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
     "typescript": "^4.1.2",
