--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react-dom": "^17.0.0",
+    "gh-pages": "^3.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
