--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.2.14",
+    "@types/d3": "^7.1.0",
     "axios": "^0.21.4",
     "babel-jest": "26.6.0",
     "bootstrap": "5.1.1",
     "cheerio": "^1.0.0-rc.10",
+    "d3": "^7.1.1",
+    "d3-geo": "^3.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3",
+    "topojson-client": "^3.1.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -23,6 +27,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/topojson-client": "^3.1.0",
     "gh-pages": "^3.2.3"
   },
   "scripts": {
