--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "dependencies": {
     "@ant-design/charts": "^1.2.14",
     "@types/d3": "^7.1.0",
+    "@types/react-lottie": "^1.2.6",
     "axios": "^0.21.4",
     "babel-jest": "26.6.0",
     "bootstrap": "5.1.1",
     "cheerio": "^1.0.0-rc.10",
     "d3": "^7.1.1",
     "d3-geo": "^3.0.1",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap-range-slider": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "react-scripts": "^4.0.3",
     "topojson-client": "^3.1.0",
     "typescript": "^4.1.2",
@@ -25,7 +29,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.0",
     "@types/topojson-client": "^3.1.0",
     "gh-pages": "^3.2.3"
