--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://poliedros.github.io/super-trunfo-camara-app",
+  "name": "super-trunfo-camara-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
